--- a/Maket/MainWindow.xaml
+++ b/Maket/MainWindow.xaml
@@ -5,8 +5,80 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Maket"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MainWindow" Height="450" Width="800" Background="#FF383838">
+    <Window.Resources>
+        <ControlTemplate x:Key="CornerButton" TargetType="{x:Type ButtonBase}">
+            <Border CornerRadius="3" x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                <ContentPresenter x:Name="contentPresenter" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" ContentStringFormat="{TemplateBinding ContentStringFormat}" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+            </Border>
+        </ControlTemplate>
+        <ControlTemplate x:Key="CornerTextBox" TargetType="{x:Type TextBoxBase}">
+            <Border x:Name="border" CornerRadius="3" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                <ScrollViewer x:Name="PART_ContentHost" Focusable="False" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
+            </Border>
+        </ControlTemplate>
+    </Window.Resources>
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.1*"/>
+            <RowDefinition Height="0.3*"/>
+            <RowDefinition Height="0.15*" />
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="2" HorizontalAlignment="Right">
+            <Button Content="Save Data" Template="{DynamicResource CornerButton}"/>
+            <Button Content="Close" Template="{DynamicResource CornerButton}"/>
+        </StackPanel>
+
+        <Grid Grid.Row="3" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <Grid Margin="10,10,0,50">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="First Name:" Grid.Column="0" Grid.Row="0" Style="{DynamicResource ResourceKey=tbWhite}"/>
+                <TextBlock Text="Last Name:" Grid.Column="0" Grid.Row="1" Style="{DynamicResource ResourceKey=tbWhite}"/>
+                <TextBlock Text="Company Name:" Grid.Column="0" Grid.Row="2" Style="{DynamicResource ResourceKey=tbWhite}"/>
+                <TextBlock Text="Devision:" Grid.Column="0" Grid.Row="3" Style="{DynamicResource ResourceKey=tbWhite}"/>
+                <TextBlock Text="Phone Numbers" Grid.Column="0" Grid.Row="4" Margin="5" Foreground="Black" FontWeight="Bold"/>
+                <TextBlock Text="Phone:" Grid.Column="0" Grid.Row="5" Style="{DynamicResource ResourceKey=tbWhite}"/>
+                <TextBlock Text="Fax:" Grid.Column="0" Grid.Row="6" Style="{DynamicResource ResourceKey=tbWhite}"/>
+
+                <TextBox Grid.Column="1" Grid.Row="0" Template="{DynamicResource CornerTextBox}"/>
+                <TextBox Grid.Column="1" Grid.Row="1" Template="{DynamicResource CornerTextBox}"/>
+                <TextBox Grid.Column="1" Grid.Row="2" Template="{DynamicResource CornerTextBox}"/>
+                <TextBox Grid.Column="1" Grid.Row="3" Template="{DynamicResource CornerTextBox}"/>
+                <TextBox Grid.Column="1" Grid.Row="5" Template="{DynamicResource CornerTextBox}"/>
+                <TextBox Grid.Column="1" Grid.Row="6" Template="{DynamicResource CornerTextBox}"/>
+            </Grid>
+
+            <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="10">
+                <TextBlock Text="Birthday:" Margin="10" VerticalAlignment="Top"  Style="{DynamicResource ResourceKey=tbWhite}"/>
+                <Calendar/>
+            </StackPanel>
+
+        </Grid>
+        <Menu Opacity="1" Background="{x:Null}" Foreground="White">
+            <MenuItem Header="File"/>
+            <MenuItem Header="Notifications"/>
+            <MenuItem Header="Status"/>
+            <MenuItem Header="View"/>
+            <MenuItem Header="Customer"/>
+        </Menu>
     </Grid>
 </Window>
