--- a/Maket/App.xaml
+++ b/Maket/App.xaml
@@ -4,6 +4,24 @@
              xmlns:local="clr-namespace:Maket"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="tbWhite">
+            <Setter Property="TextBlock.Foreground" Value="White"/>
+            <Setter Property="TextBlock.VerticalAlignment" Value="Center"/>
+            <Setter Property="TextBlock.Margin" Value="10,0"/>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="#FF7F8180"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Padding" Value="10, 0, 30, 0"/>
+            <Setter Property="BorderBrush" Value="White"/>
+            <Setter Property="Border.CornerRadius" Value="50"/>
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderBrush" Value="White"/>
+            <Setter Property="Background" Value="#FF343638"/>
+            <Setter Property="Margin" Value="3"/>
+        </Style>
     </Application.Resources>
 </Application>
